Safari alignment fix.

--- a/src/stylesheet.scss
+++ b/src/stylesheet.scss
@@ -129,7 +129,6 @@ section {
   flex-direction: column;
   flex-grow: 0;
   justify-content: center;
-  height: 100%;
   width: 100%;
   overflow: hidden;
 }
